substrate/frame/support/test/tests/pallet_ui/call_feeless_invalid_closure_arg2.stderr
error[E0308]: mismatched types
  --> tests/pallet_ui/call_feeless_invalid_closure_arg2.rs:18:1
   |
18 | #[frame_support::pallet(dev_mode)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `&<T as Config>::RuntimeOrigin`
...
31 |         #[pallet::feeless_if(|_: bool| -> bool { true })]
   |                              -------------------------- arguments to this function are incorrect
   |
   = note:   expected type `bool`
           found reference `&<T as frame_system::Config>::RuntimeOrigin`
note: closure parameter defined here
  --> tests/pallet_ui/call_feeless_invalid_closure_arg2.rs:31:25
   |
31 |         #[pallet::feeless_if(|_: bool| -> bool { true })]
   |                               ^^^^^^^
   = note: this error originates in the attribute macro `frame_support::pallet` (in Nightly builds, run with -Z macro-backtrace for more info)
